--- a/automation.yaml
+++ b/automation.yaml
@@ -1,7 +1,21 @@
 # wants: 
 # homecoming living room nightlight
-# Theatre lighting (drop to 10% when Chromecast plays, transition to off.  Raise to half when Chromecast paused, transition to
+# Theater lighting (drop to 10% when Chromecast plays, transition to off.  Raise to half when Chromecast paused, transition to
 #    75% when night, 100% when not night)
 # good night lights (transition after 8:00 to 9:15 to lower brightness on work nights)
 # cloudy day lights (
 # weather indicator light (orange for nice out, green for cold, blue for rain, pink for snow)
+
+# Example:
+# - !include automation/sleep.yaml
+
+- !include automation/come_home_late_night.yaml
+- !include automation/chrome_theater_on.yaml
+- !include automation/chrome_theater_off_evening.yaml
+- !include automation/chrome_theater_off_night.yaml
+- !include automation/work_night.yaml
+- !include automation/cloudy_day.yaml
+- !include automation/weather_clear.yaml
+- !include automation/weather_cold.yaml
+- !include automation/weather_rain.yaml
+- !include automation/weather_snow.yaml
