--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,1 +1,3 @@
+-!include: scripts/chrome_pause_stop_lights_evening.yaml
+-!include: scripts/chrome_pause_stop_lights_night.yaml
 -!include: scripts/chrome_play_dim_lights.yaml
