--- a/automation.yaml
+++ b/automation.yaml
@@ -11,13 +11,19 @@
 # Example:
 # - !include automation/sleep.yaml
 
-- !include automation/come_home_late_night.yaml
+- !include automation/come_home_night_light.yaml
 - !include automation/chrome_theater_on.yaml
 - !include automation/chrome_theater_off_evening.yaml
 - !include automation/chrome_theater_off_night.yaml
-- !include automation/work_night.yaml
-- !include automation/cloudy_day.yaml
-- !include automation/weather_clear.yaml
-- !include automation/weather_cold.yaml
-- !include automation/weather_rain.yaml
-- !include automation/weather_snow.yaml
+#- !include automation/work_night.yaml
+- !include automation/rainy_day.yaml
+- !include automation/rain_is_over.yaml
+- !include automation/dim_day.yaml
+- !include automation/office_light_off.yaml
+- !include automation/office_light_on.yaml
+#- !include automation/weather_clear.yaml
+#- !include automation/weather_cold.yaml
+#- !include automation/weather_rain.yaml
+#- !include automation/weather_snow.yaml
+- !include automation/lights_off.yaml
+#- !include automation/vacation_lights.yaml
