--- a/automation/office_light_off.yaml
+++ b/automation/office_light_off.yaml
@@ -1,12 +1,12 @@
 alias: 'Office Light off'
 trigger:
-  - platform: sun
+  platform: sun
   event: 'sunrise'
   offset: '03:00:00' 
-  - platform: state
+condition:
+  platform: state
   entity_id: group.all_devices
   state: 'home'
-condition: use_trigger_values
 action:
   service: light.turn_off
   entity_id: light.office_white
