--- a/automation/office_light_on.yaml
+++ b/automation/office_light_on.yaml
@@ -1,12 +1,12 @@
 alias: 'Office Light on'
 trigger:
-  - platform: sun
+  platform: sun
   event: 'sunset'
   offset: '-01:00:00' 
-  - platform: state
+condition:
+  platform: state
   entity_id: group.all_devices
   state: 'home'
-condition: use_trigger_values
 action:
   service: light.turn_on
   entity_id: light.office_white
