--- a/automation/lights_off.yaml
+++ b/automation/lights_off.yaml
@@ -1,8 +1,8 @@
 alias: 'All lights off'
 trigger:
-  -platform: state
-  -entity_id: group.all_devices
-  -state: not_home
+  platform: state
+  entity_id: group.all_devices
+  state: not_home
 condition: use_trigger_values
 action:
   service: home_assistant.turn_on
