--- a/scenes/living_room_low_lights.yaml
+++ b/scenes/living_room_low_lights.yaml
@@ -2,4 +2,5 @@ name: living_room_low_lights
     entities:
       light.Living_room:
         state: on
+        transition: 5
         brightness: 25
