--- a/automation/chrome_theater_off_evening.yaml
+++ b/automation/chrome_theater_off_evening.yaml
@@ -1,4 +1,4 @@
-alias: 'Turn lights up when ChromeCast pauses or stops, evening'
+alias: 'chromecast_off_evening'
 trigger: 
   platform: state
   entity_id: media_player.living_room
@@ -9,5 +9,5 @@ condition:
   -platform: time
   before: '21:00'
 action:
-  service: homeassistant.turn_on
-  entity_id: script.chrome_pause_stop_lights_evening
+  service: scene.turn_on
+  entity_id: scene.living_room_mid_high_lights
