--- a/groups.yaml
+++ b/groups.yaml
@@ -20,9 +20,9 @@ bedroom:
 office:
   name: Office
   entities:
-    - light.office_white
-    - light.lamp_mid
-    - light.lamp_bottom
+    - light.office_top
+    - light.office_mid
+    - light.office_bottom
   #kitchen:
 Extended weather:
   - sensor.weather_icon
