--- a/scripts/chrome_play_dim_lights.yaml
+++ b/scripts/chrome_play_dim_lights.yaml
@@ -8,7 +8,7 @@ chrome_play_dim_lights:
       data:
         entity_id: scene.living_room_low_lights
     - delay:
-        minutes: 1
+        seconds: 15
     - alias: 'Living room lights off'
       service: group.turn_off
       data:
