--- a/scenes/office_mid_lights.yaml
+++ b/scenes/office_mid_lights.yaml
@@ -1,11 +1,14 @@
 - name: office_mid_lights
   entities:
-    - light.office_top:
+    light.office_top:
       state: on
       brightness: 120
-    - light.office_mid:
+      transition: 2
+    light.office_mid:
       state: on
       brightness: 120
-    - light.office_bottom:
+      transition: 2
+    light.office_bottom:
       state: on
       brightness: 120
+      transition: 2
