--- a/configuration_add.yaml
+++ b/configuration_add.yaml
@@ -4,3 +4,8 @@ group: !include groups.yaml
 scene: !include scenes.yaml
 automation: !include automation.yaml
 script: !include scripts.yaml
+
+input_boolean:
+  test:
+  initial: off
+  icon: mdi:toggle-switch
