--- a/scripts/lights_out.yaml
+++ b/scripts/lights_out.yaml
@@ -1,4 +1,11 @@
-service: light.turn_off
+alias: 'Turn off all lights when no devices home'
+trigger:
+  platform: state
+  entity_id: group.all_devices
+  state: not_home
+condition: use_trigger_values
+action:
+  service: light.turn_off
   - entity_id: group.living_room
-  - entity_id: group.office
   - entity_id: group.bedroom
+  - entity_id: group.office
