--- a/scripts/lights_out.yaml
+++ b/scripts/lights_out.yaml
@@ -6,6 +6,6 @@ trigger:
 condition: use_trigger_values
 action:
   service: light.turn_off
-  - entity_id: group.living_room
-  - entity_id: group.bedroom
-  - entity_id: group.office
+    - entity_id: light.living_room
+    - entity_id: group.bedroom
+    #- entity_id: group.office
